# ai-trading

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: default.yaml
deploy/: ai_trading_deploy.sh
propmt/: main.md  strategy.md
src/: __init__.py  config.py
src/ai-trading-api/: config.py  main.py  requirements.txt
src/ai-trading-api/api/: __init__.py  hkex_router.py  hkma_router.py  stocks_router.py
src/ai-trading-api/dao/: __init__.py  hkex_dao.py  hkma_dao.py
src/ai-trading-api/database/: ai_trading_db.py
src/ai-trading-api/indicators/: __init__.py  mtm_indicators.py  overlap_Indicators.py  statistics_indicators.py  trend_indicators.py  volatility_indicators.py  volume_indicators.py
src/ai-trading-api/strategies/: score_strategy.py  strategy.py
src/ai-trading-crawler/: __init__.py  config.py  logger.py  main.py  main_manual.py  requirements.txt
src/ai-trading-crawler/crawlers/: __init__.py  hkex_crawler.py  hkma_crawler.py  stocks_crawler.py
src/ai-trading-crawler/dao/: __init__.py  hkex_dao.py  hkma_dao.py  stocks_dao.py
src/ai-trading-crawler/database/: ai_trading_db.py
src/ai-trading-crawler/tasks/: __init__.py  hkex_task.py  hkma_task.py  stocks_task.py
src/ai-trading-strategies/: config.py  main.py
src/ai-trading-strategies/dao/: __init__.py  stocks_dao.py
src/ai-trading-strategies/utils/: colors.py
src/data/: __init__.py  fetcher.py  processor.py
src/models/: __init__.py  predictor.py
src/strategies/: __init__.py  trend_strategy.py
src/utils/: __init__.py  helpers.py  logger.py
tests/: __init__.py
(+24 files in other folders)
