[project]
name = "ai-trading"
version = "0.1.0"
description = "AI Trading System"
authors = [
    {name = "Horgrix",email = "horgrix@outlook.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "akshare (>=1.18.64,<2.0.0)",
    "apscheduler (>=3.11.3,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "backtrader (>=1.9.78.123,<2.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
